[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LevelMenu/ChooseLvlMenu.gd" type="Script" id=1]

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 19.2963
margin_right = -20.0
margin_bottom = -20.7037
rect_clip_content = true
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl1Btn" type="Button" parent="GridContainer"]
margin_right = 234.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 170 )
size_flags_horizontal = 3
text = "Level 1"

[node name="Lvl2Btn" type="Button" parent="GridContainer"]
margin_left = 249.0
margin_right = 483.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 2"

[node name="Lvl3Btn" type="Button" parent="GridContainer"]
margin_left = 498.0
margin_right = 732.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 3"

[node name="Lvl4Btn" type="Button" parent="GridContainer"]
margin_left = 747.0
margin_right = 981.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 4"

[node name="Lvl5Btn" type="Button" parent="GridContainer"]
margin_top = 185.0
margin_right = 234.0
margin_bottom = 335.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 5"

[node name="Lvl6Btn" type="Button" parent="GridContainer"]
margin_left = 249.0
margin_top = 185.0
margin_right = 483.0
margin_bottom = 335.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 6"

[node name="Lvl7Btn" type="Button" parent="GridContainer"]
margin_left = 498.0
margin_top = 185.0
margin_right = 732.0
margin_bottom = 335.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 7"

[node name="Lvl8Btn" type="Button" parent="GridContainer"]
margin_left = 747.0
margin_top = 185.0
margin_right = 981.0
margin_bottom = 335.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 3
text = "Level 8"

[node name="BackBtn" type="Button" parent="GridContainer"]
margin_top = 350.0
margin_right = 234.0
margin_bottom = 520.0
rect_min_size = Vector2( 200, 170 )
custom_constants/hseparation = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="GridContainer/Lvl1Btn" to="." method="_on_Lvl1Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl2Btn" to="." method="_on_Lvl2Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl3Btn" to="." method="_on_Lvl3Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl4Btn" to="." method="_on_Lvl4Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl5Btn" to="." method="_on_Lvl5Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl6Btn" to="." method="_on_Lvl6Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl7Btn" to="." method="_on_Lvl7Btn_pressed"]
[connection signal="pressed" from="GridContainer/Lvl8Btn" to="." method="_on_Lvl8Btn_pressed"]
[connection signal="pressed" from="GridContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
